Bug 495986 - Right Click on desktop in Edit Mode says "Enter Edit Mode" instead of "Exit Edit Mode"
Summary: Right Click on desktop in Edit Mode says "Enter Edit Mode" instead of "Exit E...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Edit Mode (other bugs)
Version First Reported In: 6.2.3
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-08 20:19 UTC by Filip
Modified: 2025-02-27 14:08 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.2
Sentry Crash Report:


Attachments
plasma 6.3.1 showcase (3.35 MB, video/x-matroska)
2025-02-20 09:54 UTC, Filip
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Filip 2024-11-08 20:19:40 UTC
SUMMARY
Right Click on desktop in Edit Mode says "Enter Edit Mode" instead of "Exit Edit Mode"

STEPS TO REPRODUCE
1. Open Edit Mode
2. Right click on desktop -> "Enter Edit Mode" is displayed as an entry -> DEFECT

OBSERVED RESULT
Right Click on desktop in Edit Mode says "Enter Edit Mode"

EXPECTED RESULT
Right Click on desktop in Edit Mode says "Exit Edit Mode"

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.7.0
Qt Version: 6.8.0
Kernel Version: 6.11.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Nate Graham 2024-11-08 20:47:46 UTC
Can confirm.
Comment 2 Bug Janitor Service 2025-01-22 12:10:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5101
Comment 3 Marco Martin 2025-01-22 15:55:33 UTC
Git commit 83fdcdd6a90d18febf7ab7200ac9e36b89dc0c3c by Marco Martin.
Committed on 22/01/2025 at 15:55.
Pushed by mart into branch 'master'.

plasmashell: When in edit mode the action is called "Exit Edit Mode"

When the desktop is in edit mode, the context menu action text is changed
from "enter edit mode" to "exit edit mode"

M  +8    -1    shell/desktopview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/83fdcdd6a90d18febf7ab7200ac9e36b89dc0c3c
Comment 4 Filip 2025-02-19 06:45:05 UTC
Hey guys, this is still not fixed. There is no `version fixed in` in the ticket, but I would've expected it by now. Can you check if it was skipped somehow?

Operating System: Arch Linux 
KDE Plasma Version: 6.3.1
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.13.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 5 Nate Graham 2025-02-19 21:17:58 UTC
Should be in 6.3.0, and it's working for me. Can you attach a screen recording that shows yourself trigger the bug in Plasma 6.3.0 or later?
Comment 6 Filip 2025-02-20 09:54:06 UTC
Created attachment 178629 [details]
plasma 6.3.1 showcase

I uploaded a video.
Comment 7 Nate Graham 2025-02-26 18:42:22 UTC
How strange. All I can say is it's working for me.

Does it work properly in a new clean user account? Or is it broken there too?
Comment 8 Filip 2025-02-26 19:22:35 UTC
Broken on new account as well.

I compiled plasma from source 2 days ago and there it works correctly.
Comment 9 Nate Graham 2025-02-26 19:31:12 UTC
Aha! In that case the "Version fixed in" field must be wrong and it's a master-only fix for the time being.
Comment 10 Filip 2025-02-27 14:08:38 UTC
It's fixed in 6.3.2