plasmashell: When in edit mode the action is called "Exit Edit Mode"

When the desktop is in edit mode, the context menu action text is changed
from "enter edit mode" to "exit edit mode"

BUG:495986